parser/src/snapshots/parser__parser_test__regex_literal_alternation.snap
---
source: parser/src/parser_test.rs
expression: "format!(\"{}\\n\\n{:#?}\", source, result)"
---
/ "a" ("b" | "c") "d" /

(
    ModuleNode {
        pos: (
            0,
            23,
        ),
        body: [
            StatementNode {
                pos: (
                    0,
                    23,
                ),
                kind: Expr(
                    ExprNode {
                        pos: (
                            0,
                            23,
                        ),
                        kind: RegExpr {
                            regex: RegExprNode {
                                pos: (
                                    0,
                                    0,
                                ),
                                kind: Sequence(
                                    [
                                        RegExprNode {
                                            pos: (
                                                3,
                                                4,
                                            ),
                                            kind: Literal(
                                                "a",
                                            ),
                                        },
                                        RegExprNode {
                                            pos: (
                                                6,
                                                7,
                                            ),
                                            kind: Grouping(
                                                RegExprNode {
                                                    pos: (
                                                        8,
                                                        15,
                                                    ),
                                                    kind: Alternation(
                                                        [
                                                            RegExprNode {
                                                                pos: (
                                                                    8,
                                                                    9,
                                                                ),
                                                                kind: Literal(
                                                                    "b",
                                                                ),
                                                            },
                                                            RegExprNode {
                                                                pos: (
                                                                    14,
                                                                    15,
                                                                ),
                                                                kind: Literal(
                                                                    "c",
                                                                ),
                                                            },
                                                        ],
                                                    ),
                                                },
                                            ),
                                        },
                                        RegExprNode {
                                            pos: (
                                                19,
                                                20,
                                            ),
                                            kind: Literal(
                                                "d",
                                            ),
                                        },
                                    ],
                                ),
                            },
                        },
                        typ: Unknown,
                    },
                ),
            },
        ],
    },
    (
        {},
        [],
    ),
    [],
)
