parser/src/snapshots/parser__parser_test__regex_literal_at_most_count.snap
---
source: parser/src/parser_test.rs
expression: "format!(\"{}\\n\\n{:#?}\", source, result)"
---
/ "a" "b"{,3} "c" /

(
    ModuleNode {
        pos: (
            0,
            19,
        ),
        body: [
            StatementNode {
                pos: (
                    0,
                    19,
                ),
                kind: Expr(
                    ExprNode {
                        pos: (
                            0,
                            19,
                        ),
                        kind: RegExpr {
                            regex: RegExprNode {
                                pos: (
                                    0,
                                    0,
                                ),
                                kind: Sequence(
                                    [
                                        RegExprNode {
                                            pos: (
                                                3,
                                                4,
                                            ),
                                            kind: Literal(
                                                "a",
                                            ),
                                        },
                                        RegExprNode {
                                            pos: (
                                                7,
                                                13,
                                            ),
                                            kind: AtMostCount(
                                                RegExprNode {
                                                    pos: (
                                                        7,
                                                        8,
                                                    ),
                                                    kind: Literal(
                                                        "b",
                                                    ),
                                                },
                                                3,
                                            ),
                                        },
                                        RegExprNode {
                                            pos: (
                                                15,
                                                16,
                                            ),
                                            kind: Literal(
                                                "c",
                                            ),
                                        },
                                    ],
                                ),
                            },
                        },
                        typ: Unknown,
                    },
                ),
            },
        ],
    },
    (
        {},
        [],
    ),
    [],
)
