parser/src/snapshots/parser__parser_test__regex_literal_one_or_more.snap
---
source: parser/src/parser_test.rs
expression: "format!(\"{}\\n\\n{:#?}\", source, result)"
---
/ "a" "b"+ "c" /

(
    ModuleNode {
        pos: (
            0,
            16,
        ),
        body: [
            StatementNode {
                pos: (
                    0,
                    16,
                ),
                kind: Expr(
                    ExprNode {
                        pos: (
                            0,
                            16,
                        ),
                        kind: RegExpr {
                            regex: RegExprNode {
                                pos: (
                                    0,
                                    0,
                                ),
                                kind: Sequence(
                                    [
                                        RegExprNode {
                                            pos: (
                                                3,
                                                4,
                                            ),
                                            kind: Literal(
                                                "a",
                                            ),
                                        },
                                        RegExprNode {
                                            pos: (
                                                7,
                                                10,
                                            ),
                                            kind: OneOrMore(
                                                RegExprNode {
                                                    pos: (
                                                        7,
                                                        8,
                                                    ),
                                                    kind: Literal(
                                                        "b",
                                                    ),
                                                },
                                            ),
                                        },
                                        RegExprNode {
                                            pos: (
                                                12,
                                                13,
                                            ),
                                            kind: Literal(
                                                "c",
                                            ),
                                        },
                                    ],
                                ),
                            },
                        },
                        typ: Unknown,
                    },
                ),
            },
        ],
    },
    (
        {},
        [],
    ),
    [],
)
